[package]
name = "MiniGuard"
version = "0.1.0"
edition = "2024"

[dependencies]
wintun = "0.5"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net","time"] }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
bincode = "1"
x25519-dalek = {version = "2" , features = ["static_secrets"]}
rand_core = "0.6"
sha2 = "0.10"
hkdf = "0.12"
chacha20poly1305 = {version = "0.10", features = ["alloc"]}
hex = "0.4"
rand = "0.8"
